fixed spacing on cloud for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ li {
 .test {
   position: absolute;
   right: 0%;
-  top: 11em;
+  top: 9em;
 }
 
 .person {
